Possible 1 stars added for every town hall over 7

--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@
     <h2 id="result" class="result">3 Star Attacks Down</h2>
     <ul id="resultList4" class="resultList4"></ul>
 
+    <h2 id="result" class="result">Possible 1 Stars</h2>
+    <ul id="resultList5" class="resultList5"></ul>
+
+
     <script src="script.js"></script>
     
     
